# SLICUTLET

./: CLAUDE.md  Makefile  README.md  meson.build  pyproject.toml
.claude/skills/slicot-knowledge/: SKILL.md
.devcontainer/: Dockerfile  README.md  devcontainer.json  setup.sh
include/SLICUTLET/: slicutlet.h
python/: meson.build  slicutletmodule.c
python/extensions/: extension_mb.c
python/slicutlet/: __init__.py
python/tests/: test_ab01nd.py  test_ab04md.py  test_ab05md.py  test_ab05nd.py  test_ab07nd.py  test_ma01xx.py  test_ma02bd.py  test_ma02xx.py  test_mb01pd.py  test_mb01qd.py  test_mb01xx.py  test_mb03oy.py  test_mc01td.py
src/MB/: mb01kd.c  mb01ld.c  mb01md.c  mb01nd.c  mb01oc.c  mb01od.c  mb01oe.c  mb01oh.c  mb01oo.c  mb01os.c  mb01ot.c  mb01rb.c  mb01rd.c  mb01rh.c  mb01rt.c  mb01ru.c  mb01rw.c  mb01rx.c  mb01ry.c  mb01sd.c  mb01ss.c  mb01td.c  mb01ud.c  mb01uw.c  mb01ux.c  mb01uy.c  mb01uz.c  mb01vd.c  mb01wd.c  mb01xd.c  mb01xy.c  mb01yd.c  mb01zd.c
src/include/: slc_blaslapack.h
tools/: README.md  rebase_worktrees.sh
